# CAPSTONE

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: default.yaml
data/documents/: sample_privacy_law.txt
data/documents/attack/: attack_r9_04.txt  attack_r9_05.txt
data/documents/clean/normal/: general_02_product_guide.txt  general_03_meeting_minutes.txt  general_04_security_policy.txt  general_05_faq.txt  sample_pii_types.txt  sample_privacy_law.txt
data/documents/clean/sensitive/: sensitive_01_customer_list.txt  sensitive_02_employee_info.txt  sensitive_03_medical_records.txt  sensitive_04_contract_data.txt  sensitive_05_user_profiles.txt  sensitive_07_access_request.yaml.txt  sensitive_08_support_email.txt  sensitive_09_chat_transcript.txt  sensitive_11_identity_review.txt  sensitive_14_clinic_followup.txt  sensitive_15_vendor_invoice.txt  sensitive_16_access_log_extract.txt  sensitive_18_claims_form.txt  sensitive_19_consent_registry.txt  sensitive_20_callcenter_transcript.txt
data/documents/general/: general_04_security_policy.txt
data/documents/poisoned/attack/r4/: attack_r4_01.txt  attack_r4_02.txt  attack_r4_03.txt  attack_r4_04.txt  (+6 more)
data/documents/poisoned/normal/: general_01_company_intro.txt  general_02_product_guide.txt  general_03_meeting_minutes.txt  general_04_security_policy.txt  general_05_faq.txt  sample_privacy_law.txt
data/documents/poisoned/sensitive/: sensitive_01_customer_list.txt  sensitive_02_employee_info.txt  sensitive_03_medical_records.txt  sensitive_04_contract_data.txt  sensitive_05_user_profiles.txt  sensitive_06_billing_table.txt  sensitive_08_support_email.txt  sensitive_09_chat_transcript.txt  sensitive_10_profile_json.txt  sensitive_11_identity_review.txt  sensitive_12_payment_ticket.txt  sensitive_13_hr_emergency_contact.txt  sensitive_14_clinic_followup.txt  sensitive_15_vendor_invoice.txt  sensitive_17_legal_discovery_email.txt  sensitive_18_claims_form.txt  sensitive_19_consent_registry.txt
data/documents/sensitive/: sensitive_03_medical_records.txt
docs/: architecture.md  attack-evaluation-spec.md  experiment-runbook.md  pii-detection-and-masking.md  requirements-traceability.md  results-and-reporting.md  testing-and-acceptance.md
scripts/: audit_pii_miss_by_category.py  debug_pii_miss.py
src/rag/: __main__.py
src/rag/attack/: __init__.py  base.py  normal_baseline.py  query_generator.py  r2_extraction.py  r4_membership.py  r7_prompt_disclosure.py  r9_injection.py  runner.py
src/rag/cli/: main.py
src/rag/evaluator/: __init__.py  korean_tokenizer.py  normal_evaluator.py  r2_evaluator.py  r4_evaluator.py  r7_evaluator.py  r9_evaluator.py  summary.py
src/rag/generator/: __init__.py  generator.py
src/rag/index/: __init__.py  manager.py  store.py
src/rag/ingest/: __init__.py  cleaner.py  converter.py  embedder.py  metadata.py  pipeline.py  router.py  splitter.py  writer.py
src/rag/pii/: __init__.py  artifacts.py  classifier.py  detector.py  eval.py  masker.py  step1_regex.py  step2_checksum.py  step3_ner.py  step4_sllm.py
src/rag/report/: __init__.py  dashboard_template.py  generator.py
src/rag/retriever/: __init__.py  pipeline.py  prompt_builder.py  query_embedder.py  reranker.py  retriever.py
src/rag/utils/: config.py  experiment.py  logger.py  text.py
tests/: test_attack_eval.py  test_attack_runner_resume.py  test_failure_isolation.py  test_generator.py  test_ingest_metadata.py  test_persistent_index.py  test_pii.py  test_pii_eval.py  test_replay.py  test_report_utils.py  test_retriever_pipeline.py  test_suite_matrix.py  test_text_utils.py
tests/fixtures/: pii_eval_fixture.jsonl
참고자료/: usecase_diagram.puml
(+10 files in other folders)
